<resources>
    <string name="app_name">VIMS</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_to_vims">Welcome to VIMS</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="your_email">Your Email</string>
    <string name="login">Sign in</string>
    <string name="vims_image">Vims_Image</string>
    <string name="account_register">Don\'t have an account ? Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="create_an_new_account">Create an new account</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="have_an_account_sign_in">Have an account? Click here to Sign in</string>
    <string name="logout">Logout</string>
    <string name="department">Department</string>
    <string name="year">Year</string>
    <string name="vims">VIMS</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="roll_number">Roll Number</string>
    <string name="enrollment_number">Enrollment Number</string>

</resources>