<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D4EDFA"
    tools:context=".Login_activity">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:src="@drawable/logo"
        android:id="@+id/logo"
        android:contentDescription="@string/vims_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_vims"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:id="@+id/txt1"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="italic"
        android:id="@+id/txt2"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:drawableStart="@drawable/attach_email_24"
        android:ems="15"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:drawableStart="@drawable/password_svgrepo_com"
        android:ems="15"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textColorHint="#546E7A"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:textStyle="normal"
        android:id="@+id/forgotPassword"
        tools:ignore="RtlHardcoded" />



    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/loginbtn"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="@string/login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_register"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:id="@+id/Register"

        />





</LinearLayout>