<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D4EDFA"
    tools:context=".Register_Activity">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:src="@drawable/logo"
        android:id="@+id/logo"
        android:contentDescription="@string/vims_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_get_started"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:id="@+id/txt1"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_new_account"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="italic"
        android:id="@+id/txt2"
        />
    <EditText
        android:id="@+id/fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:autofillHints=""
        android:drawableStart="@drawable/account_circle_24"
        android:ems="15"
        android:hint="@string/full_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:drawableStart="@drawable/attach_email_24"
        android:ems="15"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:drawableStart="@drawable/password_svgrepo_com"
        android:ems="15"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textColorHint="#546E7A"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/ConPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:drawableStart="@drawable/password_svgrepo_com"
        android:ems="15"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#546E7A" />
    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:drawableStart="@drawable/baseline_call_24"
        android:ems="15"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColorHint="#546E7A"
        android:minHeight="48dp" />
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/loginbtn"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="@string/register" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_an_account_sign_in"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/gotoSign_in"
        />


</LinearLayout>